Begin swift evolution proposal: target linking strategy. * Adds bare bones linkingStrategy in SwiftPM to specify whether targets follow   a product's linking type (ex. dynamic), or fallback to always statically linking   same-package dependency targets to static linking. * TODO: Configure SwiftPM to utilize this value, when linking to same-package   targets.
Signed-off-by: furby™ <devs@wabi.foundation>

--- a/Sources/PackageModel/CMakeLists.txt
+++ b/Sources/PackageModel/CMakeLists.txt
@@ -19,6 +19,7 @@ add_library(PackageModel
   Manifest/Manifest.swift
   Manifest/PackageConditionDescription.swift
   Manifest/PackageDependencyDescription.swift
+  Manifest/PackageLinkingStrategy.swift
   Manifest/PlatformDescription.swift
   Manifest/ProductDescription.swift
   Manifest/SystemPackageProviderDescription.swift
